examples/smlfmt-1.2.0/test/fail/bad-long-id.sml
val x = Hello.0World
